src/App.scss
@import 'variables';

body {
    overflow-y: hidden;
    overflow-x: hidden;
}

.App__container {
    box-sizing: border-box;
    display: grid;
    grid-template-columns: 1fr min-content minmax(auto, 78rem) 1fr;
    grid-template-rows: auto auto 1fr auto 7rem;
    row-gap: 0.5rem;
    height: 100vh;
}

.App__header {
    margin: 0.5rem 0.5rem 0 0.5rem;
    padding: 0 1rem;
    background-color: #000;
    grid-column-start: 2;
    grid-column-end: 3;
    grid-row-start: 1;
    grid-row-end: 2;
}

.App__header-row {
    display: flex;
    flex-direction: column;
}

.App__header-audio-toggle {
    margin: 0 auto;
    margin-bottom: 0.5rem;
}

.App__app-heading {
    text-align: center;
    font-weight: normal;
    font-size: 1.3rem;
    margin: 1rem 0;
}

/* Dash connection removed for version 0.5
.App__audio-toggle-switch {
    margin-right: 1.5rem;
}
*/

.App__bluetooth-api-warning-section {
    margin-top: 1.5rem;
}

.App__scene-container {
    position: relative;
    margin-top: 0.5rem;
    margin-right: 0.5rem;
    grid-column-start: 3;
    grid-column-end: 4;
    grid-row-start: 1;
    grid-row-end: 3;
    min-height: 12rem;
    min-width: 19.5rem;
    max-width: 78rem;
    border-width: $c2lc-scene-border-width;
    border-color: $c2lc-scene-border-color;
    border-style: $c2lc-scene-border-style;
}

.App__scene-controls {
    position: absolute;
    padding: 1rem 0;
    bottom: 0;
    right: 0;
    display: grid;
    grid-template-columns: 1fr;
}

.App__scene-controls-group {
    display: flex;
    align-items: center;
    justify-self: end;
    margin: auto 1rem auto 0;
}

.App__refreshButton-container {
    margin-left: 50px;
}

.App__command-palette {
    border-radius: 0.2rem;
    text-align: center;
    margin: 0 0.5rem;
    grid-column-start: 2;
    grid-column-end: 3;
    grid-row-start: 2;
    grid-row-end: 4;
    overflow: hidden;
}

.App__command-palette-heading {
    font-weight: bold;
    font-size: inherit;
    margin: 1.5rem 0;
    border-radius: 3px;
}

.App__commandpalette-heading-short {
    display: none;
}

.App__command-palette-command-container {
    width: 100%;
    height: 100%;
    padding: 1rem;
    overflow-y: scroll;
}

.App__command-palette-commands {
    width: 6rem;
    display: grid;
    grid-template-columns: repeat(2, 2.5rem);
    grid-gap: 1rem;
}

.App__program-block-editor {
    margin-right: 0.5rem;
    grid-column-start: 3;
    grid-column-end: 4;
    grid-row-start: 3;
    grid-row-end: 4;
    height: auto;
}

.App__playAndShare-bumper {
    padding: 0;
    margin: 0;
    box-shadow: 0px 0.7rem 4px rgba(0, 0, 0, 0.25);
    grid-column-start: 1;
    grid-column-end: 5;
    grid-row-start: 4;
    grid-row-end: 5;
    height: 1px;
}

.App__playAndShare-background {
    grid-column-start: 1;
    grid-column-end: 5;
    grid-row-start: 5;
    grid-row-end: 6;
    height: 7rem;
}

.App__playAndShare-container {
    padding: 0 1rem;
    grid-column-start: 2;
    grid-column-end: 4;
    grid-row-start: 5;
    grid-row-end: 6;
    display: grid;
    grid-template-columns: 1fr 1fr;
}

.App__playControl-container {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    grid-column-start: 1;
    grid-column-end: 2;
    margin: auto 0;
}

.App__playButton-container {
    display: flex;
}

.App__playControlButton {
    margin-right: 1.5rem;
}

.App__shareButton-container {
    align-items: flex-end;
    display: flex;
    flex-direction: column;
    grid-column-start: 2;
    grid-column-end: 3;
    justify-content: center;
}

@media only screen and (max-width: 768px) {
    .App__container {
        grid-template-rows: auto auto 1fr min-content;
    }

    .App__command-palette-commands {
        height: 100%;
        width: 100%;
        display: block;
    }

    .App__command-palette-commands > button{
        margin: 0.5rem 0;
    }

    .App__commandpalette-heading-short {
        display: block;
    }

    .App__commandpalette-heading-long {
        display: none;
    }

    .App__playAndShare-container {
        padding-bottom: 2rem;
    }

}

@media only screen and (max-width: 414px) {
    body {
        overflow: scroll;
    }
}

